# polymage

./: .gitignore  .gitlab-ci.yml  mkdocs.yml  pyproject.toml
docs/: api.md
site/: 404.html  index.html  objects.inv  search.html  sitemap.xml
site/api/: index.html
site/search/: search_index.json
src/polymage/agent/: agent.py  image_captioner_agent.py  image_generator_agent.py  instruct_agent.py
src/polymage/media/: image_media.py  media.py
src/polymage/model/: model.py
src/polymage/platform/: cloudflare.py  drawthings.py  groq.py  huggingface.py  lmstudio.py  platform.py  togetherai.py
tests/integration/: test_drawthings_integration.py  test_lmstudio_integration.py  test_togetherai.py  test_togetherai_integration.py
tests/unit/: test_image_captioner_agent.py  test_image_generator_agent.py  test_image_media.py  test_instruct_agent.py
